--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li>Creating websites with Bootstrap.</li>
       </ul>
       <h2>Partnering</h2>
-      <blockquote class="bg-info">
+      <blockquote>
         <p>"It's been really good working with you!"</p>
         <footer>My partner the first day</footer>
       </blockquote>
